[project]
name = "mo_exporter"
version = "0.1.0"
description = ""
authors = [{ name = "Zash", email = "zash@fantasymail.de" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry.dependencies]
pyqt6 = "^6.7.0"

[tool.poetry.group.dev.dependencies]
mobase-stubs = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
